# finance-bot

./: README.md  pyproject.toml
finance-bot/: .env.example  __main__.py  config.py  db.py  db.sql  exceptions.py  templates.py
finance-bot/handlers/: __init__.py  add_expense.py  day.py  delete_expense.py  get_daily_limit.py  help.py  last.py  month.py  set_daily_limit.py  start.py  week.py
finance-bot/services/: categories.py  expenses.py  filters.py
finance-bot/templates/: add_expense.j2  add_expense_incorrect.j2  day.j2  delete_expense.j2  delete_expense_incorrect.j2  delete_expense_not_exists.j2  get_daily_limit.j2  help.j2  last.j2  last_empty.j2  month.j2  set_daily_limit.j2  start.j2  week.j2
